--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.css
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.css
@@ -46,12 +46,13 @@ div {
     flex: 0 0 auto;
     border: 1px solid black;
     border-radius: 5px 5px;
-    object-fit: cover;
-    width: auto;
+    width: 50%;
 }
 
-#kép1{
+#kép1 {
     margin: 3px;
+    width: 100%;
+    object-fit: contain;
 }
 
 
